--- a/src/ttt.html
+++ b/src/ttt.html
@@ -1,9 +1,10 @@
+синонимы к слову «абонировать» (9 слов)
+№       синоним исходная форма  начальная форма частота
+1       снять (104)     снять   снять   161.3
+2       снимать (77)    снимать снимать 98.5
+3       нанять (24)     нанять  нанять  11.6
+4       нанимать (24)   нанимать        нанимать        5.7
 
-1. разбор слова "бобры"
-начальная форма: бобр
-часть речи: имя существительное
-грамматика: множественное число, именительный падеж, одушевленное
-формы: бобр, бобра, бобру, бобра, бобром, бобре, бобры
-makeword.ru
-морфологический разбор слова бобры
-сообщить об ошибке
+
+5       подряжающий (7) подряжать       подряжать https://sinonim.org/  -
+6       кортомить (8)   кортомить       кортомить       -
