генерация текста чтение книги

--- a/src/ttt.html
+++ b/src/ttt.html
@@ -1,10 +1,123 @@
-синонимы к слову «абонировать» (9 слов)
-№       синоним исходная форма  начальная форма частота
-1       снять (104)     снять   снять   161.3
-2       снимать (77)    снимать снимать 98.5
-3       нанять (24)     нанять  нанять  11.6
-4       нанимать (24)   нанимать        нанимать        5.7
+главная  ›  диктанты 3 класс  ›  диктанты 3 класс 1 четверть
+категория «русский язык»
+диктанты 3 класс 1 четверть
+
+контрольные и проверочные диктанты по русскому языку для 1 четверти 3 класса - разбиты по темам, с грамматическими заданиями для школ россии. объём диктанта для 3 класса 1 четверть – 45 - 53 слова.
+
+категория «диктанты»
+диктант «осенний лес»
+октябрь. деревья давно сбросили желтые листья. в лесу идет дождь, и листва на дорожках не шуршит под ногами. дрозды кружились над рябиной. они клевали гроздья сладких ягод. в дубках кричали сойки. над елью пискнула синичка. рябчики пролетели в лесную чащу.
+диктанты 3 класс / диктанты 3 класс 1 четверть / предложение
+задание
+ 2884
+227 772
+категория «диктанты»
+диктант «любители мастерить»
+ребятишки любят мастерить разные вещицы. летом они заготовили сосновые и еловые шишки, семена различных растений. детишки запасли веточки и листочки. и вот открыта мастерская. она будет выпускать лесные игрушки. мальчики и девочки делают забавных зверюшек. вот лесовичок. какая красивая лисичка-сестричка! какие чудные ежиха и козлёнок! кому подарить эти поделки? ученики отнесли их в детский сад.
+диктанты 3 класс / диктанты 3 класс 1 четверть / слово в языке и речи
+задание
+ 1031
+91 238
+категория «диктанты»
+диктант «пернатые друзья»
+серёжа с папой делали кормушку для птиц. серёжа подавал гвозди и дощечки. папа их строгал и сколачивал. зимой каждое утро серёжа сыпал в кормушку зерно. воробьи и синички ждали мальчика. они слетались со всех сторон, спешили позавтракать. в морозные дни серёжа кормил своих пернатых друзей часто. сытая птица легко переносит холод.
+диктанты 3 класс / диктанты 3 класс 1 четверть / безударные гласные в корне слова
+задание
+ 1162
+109 551
+категория «диктанты»
+диктант «весна»
+весна долго не открывалась. в апреле стояла ясная морозная погода. днем под лучами солнца тихо таял снег. вдруг резко потянуло теплым ветром. окрестности окутались густым молочным туманом. мутным потоком полились воды. с яростным треском ломались на реке гигантские льдины. поздно вечером туман ушел. небо прояснилось. утром солнце съело тонкий лед. в теплом весеннем воздухе залились чудным хором жаворонки. высоко в небе пролетели с радостным криком журавли и гуси. пришла настоящая весна.
+слово в языке и речи / состав слова
+задание
+ 500
+51 521
+категория «диктанты»
+диктант «осень в лесу»
+как красив осенний лес! березки надели золотые платья. листья клена разрумянились. густая листва дуба стала как медь. сосны и ели остались зелеными. пестрый ковер листьев шуршал под ногами. а сколько грибов в лесу! душистые рыжики и желтые опята ждут грибников. 
+диктанты 3 класс / диктанты 3 класс 1 четверть / предложение
+задание
+ 774
+94 008
+категория «диктанты»
+контрольный диктант «осенью»
+октябрь. на дворе стоит глубокая осень. скучная картина! льют частые дожди. осенний ветер срывает последние листья с деревьев. тропинки в лесу укрыл ковёр из пёстрых листьев. ласточки, соловьи улетели на юг. сороки, вороны летят к жилью людей. звери спрятались в тепло. скоро утренний мороз затянет льдом лужи. 
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 341
+58 141
+категория «диктанты»
+диктант «прощание с осенью»
+в октябре стоит сырая погода. весь месяц льют дожди. дует осенний ветер. шумят в саду деревья. ночью перестал дождь. выпал первый снег. кругом светло. всё вокруг стало нарядным. две вороны сели на берёзу. посыпался пушистый снежок. дорога подмёрзла. хрустят листья и трава на тропе у дома.
 
 
-5       подряжающий (7) подряжать       подряжать https://sinonim.org/  -
-6       кортомить (8)   кортомить       кортомить       -
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 360
+54 981
+категория «диктанты»
+диктант «чудесная ёлка»
+идёт мелкий снежок.  пушистые  хлопья снега легли на землю и деревья. на поляне стояла молоденькая  стройная ёлочка.  ребята решили украсить её. они повесили на лесную красавицу ягоды рябины. к нижним веткам прикрепили морковку.  под ёлку положили кочан капусты. утром над ёлкой кружилась стайка птиц. вечером  прибежали два зайца. они угощались вкусным  ужином.
+
+
+диктанты 3 класс / диктанты 3 класс 1 четверть / безударные гласные в корне слова
+задание
+ 257
+43 798
+категория «диктанты»
+диктант «снежные фигурки»
+с неба летел мокрый снежок. ребята выбежали во двор и стали лепить из снега фигурки. коля слепил снеговика. хорош снеговик! в носу краснела морковка. в руке метла, а на голове ведро. женя строил башню с ледяными окошками. толя и илья лепили деда мороза и снегурочку. дед мороз был с бородой. снегурочка в руках держала зеленую елочку.
+диктанты 3 класс / диктанты 3 класс 1 четверть / безударные гласные в корне слова
+задание
+ 236
+30 178
+категория «диктанты»
+диктант «ежик»
+
+бежит через лесную полянку ежик. осенью у ежей мало добычи. скрылись юркие ящерки. в кружки свились скользкие змейки. трудно находить и жучков. в осенние дни ежик готовит жилище на зиму. ночью и днем таскает он в нору мягкий мох, душистые листочки. придет зима. накроет его нору глубокий сугроб. под пушистым, мягким одеялом тепло ему.
+
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 285
+33 896
+категория «диктанты»
+диктант «хлеб идет»
+
+идет по колхозному полю комбайн. плывет по золотым волнам пшеницы. скосил комбайн колосья, обмолотил их. подъезжают и отъезжают грузовики. чистое зерно сыплется прямо в кузов. день и ночь везут машины по дорогам зерно. зерно очищают, сушат и везут на мельницу. там его перемалывают. муку отвозят в пекарню. из муки пекут хлеб, булки, батоны.
+
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 165
+10 548
+категория «диктанты»
+диктант «загадки леса»
+ребятишки бегут на лыжах по лесной дорожке. на каждом шагу тут загадки. под деревьями пушистые шишки, скорлупки. кто тут грыз орешки? это работа белки. робкий зверек в белой шубке сидит у куста, прижал ушки. это заяц. какая птица уселась на макушке елки? сорока – белобока.
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 170
+17 052
+категория «диктанты»
+диктант «осень»
+пришла хмурая осень. серые тучи закрыли небо. весь день лил дождь. дул сильный осенний ветер. он качал деревья. земля в саду усыпана листьями. на улицах грязь и лужи. улетели грачи. они долго кружились над полями. это грачи прощались с родными местами. 
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 214
+37 332
+категория «диктанты»
+контрольный диктант «осенний лес»
+я люблю бродить осенью по лесу. в лесу тихо. идёт мелкий дождь. деревья давно сбросили листья. мокрая листва листва не шуршит под ногами. из ельника я слышу свист рябчика. над высокой елью пискнули синички. ожил и дубняк. там кричат сойки. в ветвях птички ищут пищу.
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 194
+41 982
+категория «диктанты»
+диктант «утка-чируша»
+по зеленым тростникам ползли золотые солнечные колечки. вдруг в тростнике зашуршало. кто-то продирался сквозь тесные стебли. растения дрогнули. показался плоский утиный нос. это продиралась вперед утка -чируша. за ней гуськом по дорожке торопились утята. один утенок застрял между стеблями. он стал пищать: утка ринулась назад. схватила птенца носом за шейку, подняла и понесла на чистую воду. глупыш и в материнском клюве пищит и дергает ногами.
+диктанты 3 класс / диктанты 3 класс 1 четверть
+задание
+ 100
+9 485
+категория «диктанты»
+диктант «находчивые птицы»
+кто не видел первый снег? красивое зрелище! наконец выпал на землю мягкий пушистый снежок. каждое деревце и каждый кустик надели снежные шапки. вечером с высоких берез тетерева начали нырять в снег. они пробегали несколько шагов под снегом, обминали вокруг себя местечко. выходила уютная подснежная спальня. сверху ее зверь не увидит, а внутри будет тепло и уютно.
+диктанты 3 класс / диктанты 3 класс 1 четверть / безударные гласные в корне слова
